--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jéssica Sampaio</title>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/box.css">
+    <link rel="stylesheet" href="css/components/button.css">
+    <link rel="stylesheet" href="css/components/banner.css">
 
 </head>
 
@@ -24,10 +30,24 @@
             <a href="">Projetos</a>
             <a href="">Sobre</a>
             <a href="">Contato</a>
-            <a id="button" href="" lang="en">Download CV</a>
+            <a class="button" href="" lang="en">Download CV</a>
         </nav>
 
     </header>
+
+    <section class="banner">
+        <div class="wrapper">
+        <div class="box">
+            <h1>Jéssica Sampaio</h1>
+            <h2>FrontEnd Developer</h2>
+        </div>
+
+        <div class="navigation">
+        <a class="button" href="" lang="en">Download CV</a>
+        <a class="button" href="">Contato</a>
+    </div>
+    </div>
+    </section>
 </body>
 
 </html>
