--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/section.css">
+    <link rel="stylesheet" href="css/components/skills-tec.css">
+    <link rel="stylesheet" href="css/components/progress-bar.css">
+    <link rel="stylesheet" href="css/components/wrapper-skill.css">
 
 </head>
 
@@ -37,16 +41,148 @@
 
     <section class="banner">
         <div class="wrapper">
-        <div class="box">
-            <h1>Jéssica Sampaio</h1>
-            <h2>FrontEnd Developer</h2>
-        </div>
+            <div class="box">
+                <h1 class="main-title">Jéssica Sampaio</h1>
+                <h2 class="subtitle">FrontEnd Developer</h2>
+            </div>
 
-        <div class="navigation">
-        <a class="button" href="" lang="en">Download CV</a>
-        <a class="button" href="">Contato</a>
-    </div>
-    </div>
+            <div class="navigation">
+                <a class="button" href="" lang="en">Download CV</a>
+                <a class="button" href="">Contato</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <h2 class="main-title -second">Skills</h2>
+
+        <div class="wrapper-skill">
+
+            <article class="skills-tec"> <!--description list-->
+
+                <img class="icon" src="img/ico_html5.png" alt="logo html">
+
+                <div class="right">
+                    <h3 class="title">HTML</h3>
+
+                    <dd>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </dd>
+                </div>
+            </article>
+
+
+            <article class="skills-tec"> 
+
+                <img class="icon" src="img/ico_nodejs.png" alt="logo node js">
+
+                <div class="right">
+                    <h3 class="title">NodeJS</h3>
+
+                    <dd>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </dd>
+                </div>
+            </article>
+
+
+            <article class="skills-tec"> 
+
+                <img class="icon" src="img/ico_css3.png" alt="logo css">
+
+                <div class="right">
+                    <h3 class="title">CSS</h3>
+
+                    <dd>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </dd>
+                </div>
+            </article>
+
+            <article class="skills-tec"> 
+
+                <img class="icon" src="img/ico_tdd.png" alt="logo tdd">
+
+                <div class="right">
+                    <h3 class="title">TDD</h3>
+
+                    <dd>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </dd>
+                </div>
+            </article>
+
+
+            <article class="skills-tec"> 
+
+                <img class="icon" src="img/ico_js.png" alt="logo javascript">
+
+                <div class="right">
+                    <h3 class="title">JavaScript</h3>
+
+                    <dd>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </dd>
+                </div>
+            </article>
+
+
+            <article class="skills-tec"> 
+
+                <img class="icon" src="img/ico_restapi.png" alt="logo rest">
+
+                <div class="right">
+                    <h3 class="title">Rest API</h3>
+
+                    <dd>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </dd>
+                </div>
+            </article>
+
+
+            <article class="skills-tec"> 
+
+                <img class="icon" src="img/ico_react.png" alt="logo react">
+
+                <div class="right">
+                    <h3 class="title">React</h3>
+
+                    <dd>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </dd>
+                </div>
+            </article>
+
+            <article class="skills-tec"> 
+
+                <img class="icon" src="img/ico_ux.png" alt="logo ux">
+
+                <div class="right">
+                    <h3 class="title">UX</h3>
+
+                    <dd>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </dd>
+                </div>
+            </article>
+        </div>
     </section>
 </body>
 
