--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="css/components/skills-tec.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
-
+    <link rel="stylesheet" href="css/components/card-project.css">
+    <link rel="stylesheet" href="css/components/wrapper-card.css">
 </head>
 
 <body>
@@ -30,10 +31,10 @@
         <img class="logo" src="img/3.png" alt="logo">
 
         <nav>
-            <a href="" lang="en">Skills</a>
-            <a href="">Projetos</a>
-            <a href="">Sobre</a>
-            <a href="">Contato</a>
+            <a class="menu" href="" lang="en">Skills</a>
+            <a class="menu" href="">Projetos</a>
+            <a class="menu" href="">Sobre</a>
+            <a class="menu" href="">Contato</a>
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
 
@@ -74,7 +75,7 @@
             </article>
 
 
-            <article class="skills-tec"> 
+            <article class="skills-tec">
 
                 <img class="icon" src="img/ico_nodejs.png" alt="logo node js">
 
@@ -90,7 +91,7 @@
             </article>
 
 
-            <article class="skills-tec"> 
+            <article class="skills-tec">
 
                 <img class="icon" src="img/ico_css3.png" alt="logo css">
 
@@ -105,7 +106,7 @@
                 </div>
             </article>
 
-            <article class="skills-tec"> 
+            <article class="skills-tec">
 
                 <img class="icon" src="img/ico_tdd.png" alt="logo tdd">
 
@@ -121,7 +122,7 @@
             </article>
 
 
-            <article class="skills-tec"> 
+            <article class="skills-tec">
 
                 <img class="icon" src="img/ico_js.png" alt="logo javascript">
 
@@ -137,7 +138,7 @@
             </article>
 
 
-            <article class="skills-tec"> 
+            <article class="skills-tec">
 
                 <img class="icon" src="img/ico_restapi.png" alt="logo rest">
 
@@ -153,7 +154,7 @@
             </article>
 
 
-            <article class="skills-tec"> 
+            <article class="skills-tec">
 
                 <img class="icon" src="img/ico_react.png" alt="logo react">
 
@@ -168,7 +169,7 @@
                 </div>
             </article>
 
-            <article class="skills-tec"> 
+            <article class="skills-tec">
 
                 <img class="icon" src="img/ico_ux.png" alt="logo ux">
 
@@ -184,6 +185,33 @@
             </article>
         </div>
     </section>
+
+    <section class="section -bgBlack -bdFirst">
+
+        <h2 class="main-title -second">Projetos</h2>
+
+        <div class="wrapper-card">
+            <a href="https://jessgame.vercel.app/" target="_blank">
+                <figure class="card-project">
+                    <img src="img/icon1.webp" alt="logo projeto 1">
+                </figure>
+            </a>
+
+            <a href="https://calculadora-hello-kitty.vercel.app/">
+                <figure class="card-project -blue">
+                    <img src="img/icon2.png" alt="logo projeto 2">
+                </figure>
+            </a>
+
+            <a href="https:///jessicasamppaio.github.io">
+                <figure class="card-project">
+                    <img src="img/icon3.png" alt="logo projeto 3">
+                </figure>
+            </a>
+
+        </div>
+    </section>
+
 </body>
 
 </html>
