Refatoração do código

--- a/index.html
+++ b/index.html
@@ -11,50 +11,51 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/main-header.css">
     <link rel="stylesheet" href="css/components/main-title.css">
-    <link rel="stylesheet" href="css/components/subtitle.css">
-    <link rel="stylesheet" href="css/components/box.css">
-    <link rel="stylesheet" href="css/components/button.css">
-    <link rel="stylesheet" href="css/components/banner.css">
-    <link rel="stylesheet" href="css/components/section.css">
+    <link rel="stylesheet" href="css/components/main-subtitle.css">
+    <link rel="stylesheet" href="css/components/main-box.css">
+    <link rel="stylesheet" href="css/components/main-button.css">
+    <link rel="stylesheet" href="css/components/main-banner.css">
+    <link rel="stylesheet" href="css/components/main-section.css">
     <link rel="stylesheet" href="css/components/skills-tec.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/card-project.css">
     <link rel="stylesheet" href="css/components/wrapper-card.css">
+    <link rel="stylesheet" href="css/components/main-menu.css">
 </head>
 
 <body>
 
-    <header>
+    <header class="main-header">
         <img class="logo" src="img/3.png" alt="logo">
 
         <nav>
-            <a class="menu" href="" lang="en">Skills</a>
-            <a class="menu" href="">Projetos</a>
-            <a class="menu" href="">Sobre</a>
-            <a class="menu" href="">Contato</a>
-            <a class="button" href="" lang="en">Download CV</a>
+            <a class="main-menu" href="" lang="en">Skills</a>
+            <a class="main-menu" href="">Projetos</a>
+            <a class="main-menu" href="">Sobre</a>
+            <a class="main-menu" href="">Contato</a>
+            <a class="main-button" href="" lang="en">Download CV</a>
         </nav>
 
     </header>
 
-    <section class="banner">
+    <section class="main-banner">
         <div class="wrapper">
-            <div class="box">
+            <div class="main-box">
                 <h1 class="main-title">Jéssica Sampaio</h1>
-                <h2 class="subtitle">FrontEnd Developer</h2>
+                <h2 class="main-subtitle">FrontEnd Developer</h2>
             </div>
 
             <div class="navigation">
-                <a class="button" href="" lang="en">Download CV</a>
-                <a class="button" href="">Contato</a>
+                <a class="main-button" href="" lang="en">Download CV</a>
+                <a class="main-button" href="">Contato</a>
             </div>
         </div>
     </section>
 
-    <section class="section">
+    <section class="main-section">
         <h2 class="main-title -second">Skills</h2>
 
         <div class="wrapper-skill">
@@ -186,7 +187,7 @@
         </div>
     </section>
 
-    <section class="section -bgBlack -bdFirst">
+    <section class="main-section -bgBlack -bdFirst">
 
         <h2 class="main-title -second">Projetos</h2>
 
@@ -197,13 +198,13 @@
                 </figure>
             </a>
 
-            <a href="https://calculadora-hello-kitty.vercel.app/">
+            <a href="https://calculadora-hello-kitty.vercel.app/" target="_blank">
                 <figure class="card-project -blue">
-                    <img src="img/icon2.png" alt="logo projeto 2">
+                    <img src="img/icon5.png" alt="logo projeto 2">
                 </figure>
             </a>
 
-            <a href="https:///jessicasamppaio.github.io">
+            <a href="https:///jessicasamppaio.github.io" target="_blank">
                 <figure class="card-project">
                     <img src="img/icon3.png" alt="logo projeto 3">
                 </figure>
