Ajustes na sessão sobre

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="css/components/card-project.css">
     <link rel="stylesheet" href="css/components/wrapper-card.css">
     <link rel="stylesheet" href="css/components/main-menu.css">
+    <link rel="stylesheet" href="css/components/main-description.css">
+    <link rel="stylesheet" href="css/components/button-arrow.css">
 </head>
 
 <body>
@@ -211,6 +213,21 @@
             </a>
 
         </div>
+    </section>
+
+    <section class="main-section -bgSecond -bdBlack">
+
+        <h2 class="main-title -second">Sobre</h2>
+
+        <p class="main-description">
+            Olá, me chamo Jéssica, sou uma entusiasta da programação apaixonada pelo universo front-end, atualmente cursando Técnico em Informática para Internet no Senac. Minha jornada envolve a criação de interfaces com HTML e CSS, além de explorar as nuances do Javascript para adicionar interatividade em minhas páginas. Convido você a explorar meu portfólio para ver como transformo conceitos em experiências visuais envolventes!😊🤍
+
+
+            
+
+
+        </p>
+
     </section>
 
 </body>
