--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <img class="logo" src="img/3.png" alt="logo">
 
         <nav>
-            <a class="main-menu" href="" lang="en">Skills</a>
-            <a class="main-menu" href="">Projetos</a>
-            <a class="main-menu" href="">Sobre</a>
-            <a class="main-menu" href="">Contato</a>
+            <a class="main-menu" href="#skills" lang="en">Skills</a>
+            <a class="main-menu" href="#projetos">Projetos</a>
+            <a class="main-menu" href="#sobre">Sobre</a>
+            <a class="main-menu" href="#contato">Contato</a>
             <a class="main-button" href="" lang="en">Download CV</a>
         </nav>
 
@@ -56,12 +56,12 @@
 
             <div class="navigation">
                 <a class="main-button" href="" lang="en">Download CV</a>
-                <a class="main-button" href="">Contato</a>
+                <a class="main-button" href="#contato">Contato</a>
             </div>
         </div>
     </section>
 
-    <section class="main-section">
+    <section id="skills" class="main-section">
         <h2 class="main-title -second">Skills</h2>
 
         <div class="wrapper-skill">
@@ -193,7 +193,7 @@
         </div>
     </section>
 
-    <section class="main-section -bgBlack -bdFirst">
+    <section id="projetos" class="main-section -bgBlack -bdFirst">
 
         <h2 class="main-title -second">Projetos</h2>
 
@@ -219,7 +219,7 @@
         </div>
     </section>
 
-    <section class="main-section -bgSecond -bdBlack">
+    <section id="sobre" class="main-section -bgSecond -bdBlack">
 
         <h2 class="main-title -second">Sobre</h2>
 
@@ -232,7 +232,7 @@
         </p>
     </section>
 
-    <form class="main-form">
+    <form id="contato" class="main-form">
         <h2 class="main-title -second">Contato</h2>
 
         <label class="main-label" for="name">Nome</label>
@@ -261,5 +261,18 @@
         </a>
     </footer>
 </body>
+
+<script>
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+                behavior: 'smooth'
+            });
+        });
+    });
+</script>
+
 
 </html>
