Atualização do botão de CV

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="main-menu" href="#projetos">Projetos</a>
             <a class="main-menu" href="#sobre">Sobre</a>
             <a class="main-menu" href="#contato">Contato</a>
-            <a class="main-button" href="" lang="en">Download CV</a>
+            <a class="main-button" href="img/curriculo-jessica-sampaio.pdf" lang="en">Download CV</a>
         </nav>
 
     </header>
