Atualização do CV

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="main-menu" href="#projetos">Projetos</a>
             <a class="main-menu" href="#sobre">Sobre</a>
             <a class="main-menu" href="#contato">Contato</a>
-            <a class="main-button" href="img/curriculo-jessica-sampaio.pdf" lang="en">Download CV</a>
+            <a class="main-button" href="img/Purple Pink White Modern Minimalist UI Graphic Designer Resume (1).pdf" lang="en">Download CV</a>
         </nav>
 
     </header>
@@ -74,8 +74,8 @@
                     <h3 class="title">HTML</h3>
 
                     <dd>
-                        <progress class="progress-bar" max="100" value="70">
-                            70%
+                        <progress class="progress-bar" max="100" value="90">
+                            90%
                         </progress>
                     </dd>
                 </div>
@@ -106,8 +106,8 @@
                     <h3 class="title">CSS</h3>
 
                     <dd>
-                        <progress class="progress-bar" max="100" value="70">
-                            70%
+                        <progress class="progress-bar" max="100" value="80">
+                            80%
                         </progress>
                     </dd>
                 </div>
@@ -121,8 +121,8 @@
                     <h3 class="title">TDD</h3>
 
                     <dd>
-                        <progress class="progress-bar" max="100" value="70">
-                            70%
+                        <progress class="progress-bar" max="100" value="30">
+                            30%
                         </progress>
                     </dd>
                 </div>
@@ -137,8 +137,8 @@
                     <h3 class="title">JavaScript</h3>
 
                     <dd>
-                        <progress class="progress-bar" max="100" value="70">
-                            70%
+                        <progress class="progress-bar" max="100" value="60">
+                            60%
                         </progress>
                     </dd>
                 </div>
@@ -153,8 +153,8 @@
                     <h3 class="title">Rest API</h3>
 
                     <dd>
-                        <progress class="progress-bar" max="100" value="70">
-                            70%
+                        <progress class="progress-bar" max="100" value="20">
+                            20%
                         </progress>
                     </dd>
                 </div>
@@ -169,8 +169,8 @@
                     <h3 class="title">React</h3>
 
                     <dd>
-                        <progress class="progress-bar" max="100" value="70">
-                            70%
+                        <progress class="progress-bar" max="100" value="20">
+                            20%
                         </progress>
                     </dd>
                 </div>
@@ -184,8 +184,8 @@
                     <h3 class="title">UX</h3>
 
                     <dd>
-                        <progress class="progress-bar" max="100" value="70">
-                            70%
+                        <progress class="progress-bar" max="100" value="10">
+                            10%
                         </progress>
                     </dd>
                 </div>
