Atualizando o botão de CV

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="navigation">
-                <a class="main-button" href="" lang="en">Download CV</a>
+                <a class="main-button" href="img/curriculo-jessica.pdf" lang="en">Download CV</a>
                 <a class="main-button" href="#contato">Contato</a>
             </div>
         </div>
