Atualizações para deixar interface responsiva

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="css/components/main-label.css">
     <link rel="stylesheet" href="css/components/main-input.css">
     <link rel="stylesheet" href="css/components/main-form.css">
+    <link rel="stylesheet" href="css/components/responsive.css">
 </head>
 
 <body>
@@ -206,7 +207,7 @@
 
             <a href="https://calculadora-hello-kitty.vercel.app/" target="_blank">
                 <figure class="card-project -blue">
-                    <img src="img/icon5.png" alt="logo projeto 2">
+                    <img src="img/icon5.png"  alt="logo projeto 2">
                 </figure>
             </a>
 
