--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 
     <header class="main-header">
-        <img class="logo" src="img/3.png" alt="logo">
+        <img class="logo" src="img/3.png" alt="logo jessica">
 
         <nav>
             <a class="main-menu" href="#skills" lang="en">Skills</a>
@@ -199,19 +199,19 @@
         <h2 class="main-title -second">Projetos</h2>
 
         <div class="wrapper-card">
-            <a href="https://jessgame.vercel.app/" target="_blank">
+            <a class="img-icons" href="https://jessgame.vercel.app/" target="_blank">
                 <figure class="card-project">
                     <img src="img/icon1.webp" alt="logo projeto 1">
                 </figure>
             </a>
 
-            <a href="https://calculadora-hello-kitty.vercel.app/" target="_blank">
+            <a class="img-icons" href="https://calculadora-hello-kitty.vercel.app/" target="_blank">
                 <figure class="card-project -blue">
                     <img src="img/icon5.png"  alt="logo projeto 2">
                 </figure>
             </a>
 
-            <a href="https:///jessicasamppaio.github.io" target="_blank">
+            <a class="img-icons" href="https:///jessicasamppaio.github.io" target="_blank">
                 <figure class="card-project">
                     <img src="img/icon3.png" alt="logo projeto 3">
                 </figure>
@@ -234,7 +234,7 @@
     </section>
 
     <form id="contato" class="main-form">
-        <h2 class="main-title -second">Contato</h2>
+        <h2 class="main-title -second-2">Contato</h2>
 
         <label class="main-label" for="name">Nome</label>
         <input class="main-input" id="name" type="text" required>
