Atualizando com um novo projeto

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </figure>
             </a>
 
-            <a class="img-icons" href="https:///jessicasamppaio.github.io" target="_blank">
+            <a class="img-icons" href="https://jessicasamppaio.github.io/formulario-cadastro/" target="_blank">
                 <figure class="card-project">
                     <img src="img/icon3.png" alt="logo projeto 3">
                 </figure>
