Atualizando com novo projeto

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <h2 class="main-title -second">Projetos</h2>
 
         <div class="wrapper-card">
-            <a class="img-icons" href="https://jessgame.vercel.app/" target="_blank">
+            <a class="img-icons" href="https://jessicasamppaio.github.io/UXperienceSummit/" target="_blank">
                 <figure class="card-project">
                     <img src="img/icon1.webp" alt="logo projeto 1">
                 </figure>
