--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </figure>
             </a>
 
-            <a class="img-icons" href="https://calculadora-hello-kitty.vercel.app/" target="_blank">
+            <a class="img-icons" href="https://jessicasamppaio.github.io/restaurante/" target="_blank">
                 <figure class="card-project -blue">
                     <img src="img/icon5.png"  alt="logo projeto 2">
                 </figure>
